--- a/index.html
+++ b/index.html
@@ -474,10 +474,10 @@
                                     <i></i>
                                     </span>
                                     <div class="todo-check pull-left">
-                                        <input type="checkbox" value="None" id="todo-check"/>
+                                        <input type="checkbox" value="None" id="todo-check" checked/>
                                         <label for="todo-check"></label>
                                     </div>
-                                    <p class="todo-title">
+                                    <p class="todo-title line-through" style="color: red">
                                         日常任务-设备巡检任务-1112 ：卢耘晓、赵胤君
                                     </p>
                                     <div class="todo-actionlist pull-right clearfix">
@@ -506,11 +506,11 @@
                                     <i></i>
                                     </span>
                                     <div class="todo-check pull-left">
-                                        <input type="checkbox" value="None" id="todo-check2"/>
+                                        <input type="checkbox" value="None" id="todo-check2" checked/>
                                         <label for="todo-check2"></label>
                                     </div>
-                                    <p class="todo-title">
-                                        日常任务-水位上报任务-1110 ：袁公子
+                                    <p class="todo-title line-through" style="color: red">
+                                        日常任务-水位上报任务-1110 ：运维部门
                                     </p>
                                     <div class="todo-actionlist pull-right clearfix">
 
@@ -542,7 +542,7 @@
                                         <label for="todo-check4"></label>
                                     </div>
                                     <p class="todo-title">
-                                        一般任务-设备维护任务-1100 ：外包养护公司
+                                        一般任务-设备维护任务-1100 ：养护公司
                                     </p>
                                     <div class="todo-actionlist pull-right clearfix">
 
@@ -557,7 +557,7 @@
                                         <div class="form-group todo-entry">
                                             <input type="text" placeholder="搜索" class="form-control" style="width: 100%">
                                         </div>
-                                        <button class="btn btn-primary pull-right" type="submit">+</button>
+                                        <button class="btn btn-primary pull-right" type="submit">查询</button>
                                     </form>
                                 </div>
                             </div>
@@ -783,15 +783,11 @@
 <!--Dashboard Charts-->
 <script src="js/dashboard-chart-init.js"></script>
 
-<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=1020aebdfa5dfd15c5bc40bd8fc88117"></script>
+<!--<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=1020aebdfa5dfd15c5bc40bd8fc88117"></script>-->
 
  <script type="text/javascript">
-        var map = new AMap.Map('container',{
-            resizeEnable: true,
-            zoom: 13,
-            center: [116.480983, 40.0958]
-        });
-    </script>
+
+</script>
 
 </body>
 </html>
